# anki_builder

./: .gitignore  README.md  pyproject.toml
greek_anki/: __init__.py  __main__.py  cli.py  database.py  enricher.py  exporter.py  parser.py  templates.py
